feat: update base module and permission module